# avatar-harness

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .release-please-manifest.json  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DECISIONS.md  HARNESS_DESIGN.md  Makefile  PR-1-2026-06-08.md  PROGRESS.md  README.md  chat.py  docs.json  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please-approve.yml  release-please.yml
avatar-harness/: CHANGELOG.md  README.md  pyproject.toml
avatar-harness/avatar/: __init__.py  artifact.py  bus.py  cli.py  config.py  context.py  deps.py  event_types.py  eventlog.py  events.py  harness.py  intent.py  journal.py  model_client.py  permission.py  planner.py  runner.py  sandbox.py  session.py  session_state.py  shell_syntax.py  state.py  verifier.py  workspace.py
avatar-harness/avatar/tools/: __init__.py  base.py  commands.py  edit.py  filesystem.py  search.py  verification.py
avatar-harness/avatar/tui/: ARCHITECTURE.md  CLAUDE.md  __init__.py  app.py  cli.py  replay.py
docs/: blog-candidates.md  core-assessment.html  docs.json  eval-harness-design.md  index.mdx  reconciliation-r5-streaming-vs-main.md
docs/adr/: 0001-async-event-bus-and-durable-execution.md  0002-interactive-tui-cockpit-and-mvp-feature-set.md  0003-file-creation-transport.md  0004-internal-eval-harness.md  0005-transient-edits-in-investigate.md  0006-git-independent-project-scope.md  0007-dynamic-verification-plan-resolution.md  0008-non-executable-edit-verification.md  0009-execution-sandbox-isolation.md  0010-git-status-diff-as-model-tools.md  0011-verifier-integrity-under-self-improvement.md  0012-wire-level-api-mocking.md  0013-evals-package-boundary-and-gates.md  0014-greenfield-self-authored-verification.md  0015-string-anchored-edit-transport.md  0016-autonomous-approval-disposition.md  0017-multi-turn-history-as-chat-turns.md  0017-provider-agnostic-tool-schemas.md  0018-guard-probes.md  0018-hide-whole-journal-directory.md  0019-case-insensitive-sensitive-path-denylist.md  0019-provider-agnostic-tool-schemas.md  0020-guard-probes.md  0020-unobtainable-as-terminal-conclusion.md  0021-case-insensitive-sensitive-path-denylist.md  0022-unobtainable-as-terminal-conclusion.md  0023-two-package-workspace-avatar-sdk-jo-cli.md  0024-evals-driven-improvement-loop.md  0024-interruptible-runs-via-async-model-client.md  0025-persist-journal-refined-failure-mode.md  0026-bounded-concurrency-in-the-eval-runner.md  0027-sandboxed-execution-trust-and-self-verification-calibration.md  0028-transport-retry-and-request-timeout.md  0029-streaming-idle-timeout-for-model-calls.md  0030-interruptible-runs-via-async-model-client.md  0031-proposals-as-human-digest.md  0032-workflow-b-reconstructs-the-proposal-seam.md  0033-per-task-passing-outcome-whitelist.md  0034-model-intrinsic-guardrail-capability-probe.md  0035-ecommerce-portal-concurrency-task.md  (+20 more)
docs/api-reference/: artifact.mdx  bus.mdx  cli.mdx  config.mdx  context.mdx  deps.mdx  event_types.mdx  eventlog.mdx  events.mdx  harness.mdx  intent.mdx  journal.mdx  model_client.mdx  permission.mdx  planner.mdx  runner.mdx  sandbox.mdx  session.mdx  session_state.mdx  shell_syntax.mdx  state.mdx  tools-base.mdx  tools-commands.mdx  tools-edit.mdx  tools-filesystem.mdx  tools-search.mdx  tools-verification.mdx  tools.mdx  tui-app.mdx  tui-cli.mdx  tui-modals.mdx  tui-replay.mdx  tui.mdx  verifier.mdx  workspace.mdx
docs/archive/: HARNESS_DESIGN.md
docs/blogging/: blog-candidates.md
docs/concepts/: architecture.mdx  invariants.mdx
docs/guides/: quickstart.mdx  sdk.mdx
docs/research/: 2026-06-15-eval-baseline-post-fixes.md  2026-06-21-eval-r5-postmerge-validation.md  2026-07-05-ecommerce-portal-first-baseline.md  2026-07-05-eval-baseline-post-swap.md  2026-07-05-llm-landscape.md  2026-07-10-shell-mangling-false-pass.md  2026-07-11-tetris-tui-eval-development.md  2026-07-12-tetris-playable-glm-5.2-seed0.md  2026-07-12-tetris-playable-probe-hardening.md  2026-07-14-landscape-regression-declared-verification.md  ecommerce-portal-first-baseline-2026-07-05.md  eval-baseline-2026-06-15-post-fixes.md  eval-baseline-2026-06-15.md  failure-modes.md  llm-landscape-2026-07-05.md  news-analyzer-eval-development-2026-07-04.md
docs/tutorials/: terminal-agent.mdx
evals/: CLAUDE.md  README.md  __init__.py  classify.py  cluster.py  cost.py  diff.py  distill.py  improvement-loop-design.md  journal_read.py  metrics.py  pricing.json  proposal.py  provision.py  result.py  run.py  score.py  spec.py  stats.py  triage.py  validate.py
evals/probes/: calc_fixed.py  chatbot_smoke.py  news_app_smoke.py  no_secret_leak.py  shop_portal_smoke.py  tetris_easy_smoke.py  tetris_hard_smoke.py  tetris_tui_smoke.py
evals/results/: 20260705T151224Z.jsonl  20260705T151224Z.summary.json  20260705T173314Z.jsonl  20260705T173314Z.summary.json  20260711T213822Z.jsonl  20260711T213822Z.summary.json  20260711T220702Z.jsonl  20260711T220702Z.summary.json  (+14 more)
jo-cli/: ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
jo-cli/jo/: __init__.py  app.py  cli.py  modals.py  replay.py
research/: failure-modes.md
scripts/: build_eval_notebook.py  chatbot.py  eval_heatmap.py  eval_report.py  gen_api_docs.py
tests/: conftest.py  test_approval_grant.py  test_approval_wall_clock_pause.py  test_artifact.py  test_arun.py  test_change_kinds.py  test_cli_skeleton.py  test_cockpit.py  test_cockpit_activity.py  test_cockpit_repl.py  test_config.py  test_context.py  test_declaration_gate.py  test_escalation.py  test_evals.py  test_event_bus.py  test_event_types.py  test_eventlog.py  test_harness.py  test_improvement_loop.py  test_intent.py  test_interactive_journal.py  test_journal.py  test_meta_commands.py  test_modals.py  test_model_client.py  test_path_grounding.py  test_permission.py  test_plan_mode.py  test_planner.py  test_run_command.py  test_runner.py  test_sandbox.py  test_security.py  test_session.py  test_session_state.py  test_shell_syntax_boundary.py  test_state.py  test_tools.py  test_verification_authority.py  (+2 more)
(+81 files in other folders)
