[project]
name = "avatar-harness"
version = "0.0.0"
description = "A minimal, ground-up coding agent harness: a bounded, verifiable loop around an LLM."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Sarthak Joshi" }]
keywords = ["llm", "agent", "coding-agent", "harness", "tool-calling"]

dependencies = [
    "openai>=1.40",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[dependency-groups]
# Hard-gate tools are pinned and installed (reproducible CI gate).
# Soft-gate tools (interrogate, vulture, pip-audit, semgrep) run via `uvx` in the
# Makefile/CI so they don't bloat the locked dev environment (goal: minimal deps).
dev = [
    "ruff>=0.5",
    "pyrefly>=1.0,<1.1",
    "pydoclint>=0.5",
    "deptry>=0.20",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pre-commit>=3.7",
]

[project.scripts]
avatar-harness = "avatar_harness.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/avatar_harness"]

# --- Ruff: lint + format. Encodes readability (#1) and verbosity ceilings (#2). ---
[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",       # pycodestyle + pyflakes baseline
    "I",                 # import sorting (isort)
    "UP",                # pyupgrade — modern syntax
    "B",                 # bugbear — real bug patterns
    "SIM", "C4", "RET",  # anti-verbosity: simplify, comprehensions, returns
    "PTH",               # pathlib over os.path
    "C90",               # mccabe complexity ceiling
    "PL",                # pylint: too-many-args/branches/statements/returns
    "N",                 # pep8 naming
    "ANN",               # require annotations — types as documentation
    "D",                 # docstrings (Google convention, configured below)
    "S",                 # flake8-bandit security
    "ARG",               # unused arguments — agent bloat
    "ERA",               # commented-out code — agent litter
    "T20",               # stray print()
    "RUF",               # ruff-native rules
]
ignore = [
    "ANN401",  # allow explicit `Any` where genuinely needed
    "D107",    # __init__ docstring is redundant with the class docstring (avoid bloat — goal #2)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ANN", "S", "ARG", "PLR2004", "PLR0913"]
"**/__init__.py" = ["D104"]
# By-design: the harness exists to run external commands (ripgrep, test/lint runners).
# Subprocess use in these modules is the feature, not a smell — they validate paths/args themselves.
"src/avatar_harness/tools/search.py" = ["S603", "S607"]
"src/avatar_harness/workspace.py" = ["S603", "S607"]
# The CLI legitimately writes to stdout.
"src/avatar_harness/cli.py" = ["T201"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 6
max-branches = 12
max-statements = 50
max-returns = 6

[tool.ruff.lint.pydocstyle]
convention = "google"

# --- pydoclint: docstring<->signature agreement, Google style (#4). ---
# Types live in signatures (Pyrefly checks them), NOT duplicated in docstrings.
[tool.pydoclint]
style = "google"
arg-type-hints-in-docstring = false
check-return-types = false
check-yield-types = false
require-return-section-when-returning-nothing = false

# --- Pyrefly: sole hard type gate (#1). Pinned to 1.0.x; bump deliberately. ---
[tool.pyrefly]
project-includes = ["src", "tests"]
python-version = "3.12"

# --- deptry: dependency hygiene — unused/missing/transitive (#5). ---
[tool.deptry]
# Defaults are sensible; add per-rule ignores here as the dependency graph grows.

# --- interrogate: docstring coverage ratchet (soft). Run via uvx. ---
[tool.interrogate]
fail-under = 85  # current baseline (public API ~100%; remainder is private helpers) — ratchet upward
ignore-init-method = true
ignore-magic = true
ignore-nested-functions = true
ignore-private = true
ignore-module = false
exclude = ["tests", "build", "dist"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
