[project]
name = "avatar-harness"
version = "0.3.1"
description = "A minimal, ground-up coding agent harness: a bounded, verifiable loop around an LLM."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Sarthak Joshi" }]
keywords = ["llm", "agent", "coding-agent", "harness", "tool-calling"]

dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

# Provider backends are optional extras: the core package (state, tools, runner,
# verifier, prompt assembly) imports without them. `OpenAIModelClient` lazily imports
# `openai` and raises a clear error if the extra is missing.
[project.optional-dependencies]
openai = ["openai>=1.40"]
# The interactive TUI cockpit (Phase 3.1 Lane 2). The core engine + SDK import without
# it; `avatar_harness.tui` guards its import and the CLI prints an install hint.
textual = ["textual>=0.50"]

[dependency-groups]
# Hard-gate tools are pinned and installed (reproducible CI gate).
# Soft-gate tools (interrogate, vulture, pip-audit, semgrep) run via `uvx` in the
# Makefile/CI so they don't bloat the locked dev environment (goal: minimal deps).
dev = [
    "ruff>=0.5",
    "pyrefly>=1.0,<1.1",
    "pydoclint>=0.5",
    "deptry>=0.20",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pre-commit>=3.7",
    "openai>=1.40",  # the OpenAI extra, installed for dev/CI so the test suite can exercise it
    "textual>=0.50",  # the TUI extra, installed for dev/CI so the cockpit tests can run
]

[project.scripts]
avatar-harness = "avatar_harness.cli:main"
# The cockpit's own launcher (needs the [textual] extra at runtime; prints an install
# hint without it). The TUI is a consumer of the core, so it owns its entry point —
# the batch CLI never imports the TUI.
jo-cli = "avatar_harness.tui.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/avatar_harness"]

# --- Ruff: lint + format. Encodes readability (#1) and verbosity ceilings (#2). ---
[tool.ruff]
line-length = 110
target-version = "py312"
# Eval fixtures are deliberately-imperfect sample repos the agent operates on (a buggy
# function, a secret file) — input data, not code we maintain. Don't lint or format them.
extend-exclude = ["evals/fixtures"]

[tool.ruff.lint]
select = [
    "E", "F", "W",       # pycodestyle + pyflakes baseline
    "I",                 # import sorting (isort)
    "UP",                # pyupgrade — modern syntax
    "B",                 # bugbear — real bug patterns
    "SIM", "C4", "RET",  # anti-verbosity: simplify, comprehensions, returns
    "PTH",               # pathlib over os.path
    "C90",               # mccabe complexity ceiling
    "PL",                # pylint: too-many-args/branches/statements/returns
    "N",                 # pep8 naming
    "ANN",               # require annotations — types as documentation
    "D",                 # docstrings (Google convention, configured below)
    "S",                 # flake8-bandit security
    "ARG",               # unused arguments — agent bloat
    "ERA",               # commented-out code — agent litter
    "T20",               # stray print()
    "RUF",               # ruff-native rules
]
ignore = [
    "ANN401",  # allow explicit `Any` where genuinely needed
    "D107",    # __init__ docstring is redundant with the class docstring (avoid bloat — goal #2)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "ANN", "S", "ARG", "PLR2004", "PLR0913"]
"**/__init__.py" = ["D104"]
# By-design: the harness exists to run external commands (ripgrep, test/lint runners).
# Subprocess use in these modules is the feature, not a smell — they validate paths/args themselves.
"src/avatar_harness/tools/search.py" = ["S603", "S607"]
"src/avatar_harness/workspace.py" = ["S603", "S607"]
# The CLI legitimately writes to stdout.
"src/avatar_harness/cli.py" = ["T201"]
# Build tooling, not library code: relax annotation/print/complexity strictness.
"scripts/**" = ["ANN", "T20", "C901", "PLR0912", "PLR0913", "PLR0915"]
# Eval tooling (dev, not shipped): running external commands and printing a report is the
# feature; it validates its own argv. The probe is a script that hooks imports/stdin.
"evals/**" = ["S603", "S607", "T201"]
"evals/probes/**" = ["S603", "S607", "T201", "ANN", "ARG", "PLR2004", "PLC0415"]

# Pin first-party detection so import sorting is identical everywhere. Auto-detection
# varies by environment (editable install vs clean CI checkout), which can make a
# mis-sorted import block pass locally but fail CI — pinning closes that blind spot.
[tool.ruff.lint.isort]
known-first-party = ["avatar_harness"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 6
max-branches = 12
max-statements = 50
max-returns = 6

[tool.ruff.lint.pydocstyle]
convention = "google"

# --- pydoclint: docstring<->signature agreement, Google style (#4). ---
# Types live in signatures (Pyrefly checks them), NOT duplicated in docstrings.
[tool.pydoclint]
style = "google"
# evals library modules are gated like src; its probes (lightweight scripts) and fixtures
# (sample data) are excluded, mirroring the ruff carve-outs for those paths.
exclude = '\.venv|evals/fixtures|evals/probes'
arg-type-hints-in-docstring = false
check-return-types = false
check-yield-types = false
require-return-section-when-returning-nothing = false
# Enforce strictly: a one-line docstring on a function with params/returns is NOT a
# pass — it must still document Args/Returns. (Default skips short docstrings, which
# silently let undocumented args/returns through.)
skip-checking-short-docstrings = false
# Don't require re-documenting class attributes in docstrings: types live in the
# signature/field definitions (Pyrefly checks them) and duplicating every pydantic
# field in the docstring is exactly the verbosity this project avoids.
check-class-attributes = false

# --- Pyrefly: sole hard type gate (#1). Pinned to 1.0.x; bump deliberately. ---
[tool.pyrefly]
# `evals` (dev tooling) is held to the same type gate as `src` — except its probes (runtime
# scripts that import agent-generated modules, e.g. `import calc`, unresolvable statically) and
# its fixtures (deliberately-imperfect sample repos), excluded as ruff excludes them.
project-includes = ["src", "tests", "evals"]
project-excludes = ["**/__pycache__/**", "**/.[!/.]*/**", "evals/fixtures", "evals/probes"]
# `tests` is an import root too, so shared test stubs in `tests/conftest.py` (e.g. ScriptedModel,
# imported as `from conftest import ...`) resolve under the type checker as they do under pytest.
# `.` makes the root-level `evals` package importable from tests.
search-path = ["src", "tests", "."]
python-version = "3.12"

# --- deptry: dependency hygiene — unused/missing/transitive (#5). ---
[tool.deptry]
# `evals` is a first-party package living outside `src/` (dev tooling); without this deptry
# reads its intra-package imports as a missing third-party dep.
known_first_party = ["evals"]
# Probes (which import agent-generated modules like `calc`) and fixtures aren't dep-checked,
# mirroring the ruff/pyrefly/pydoclint carve-outs for those paths.
extend_exclude = ["evals/fixtures", "evals/probes"]

# --- interrogate: docstring coverage ratchet (soft). Run via uvx. ---
[tool.interrogate]
fail-under = 85  # current baseline (public API ~100%; remainder is private helpers) — ratchet upward
ignore-init-method = true
ignore-magic = true
ignore-nested-functions = true
ignore-private = true
ignore-module = false
exclude = ["tests", "build", "dist"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Repo root on sys.path so tests can import the root-level `evals` package (dev tooling,
# deliberately outside the shipped `src/avatar_harness`).
pythonpath = ["."]
